WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
35382
[Qt] GraphicsLayerQt: artifacts and wrong transformOrigin
https://bugs.webkit.org/show_bug.cgi?id=35382
Summary
[Qt] GraphicsLayerQt: artifacts and wrong transformOrigin
Noam Rosenthal
Reported
2010-02-25 05:39:14 PST
Two issues with the above page: 1. the text scales from the corner and not from the middle 2. The un-transformed item remains in the background
Attachments
Fix a regression caused by some optimization to GraphicsLayerQt, and adjust the transformation
(4.01 KB, patch)
2010-02-25 11:15 PST
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2010-02-25 11:15:56 PST
Created
attachment 49511
[details]
Fix a regression caused by some optimization to GraphicsLayerQt, and adjust the transformation This fixes a couple of smaller bugs in one go: that's the only way to test that the fix is correct as the test-cases are the same.
Kenneth Rohde Christiansen
Comment 2
2010-02-25 11:31:23 PST
Comment on
attachment 49511
[details]
Fix a regression caused by some optimization to GraphicsLayerQt, and adjust the transformation Thanks for the quick fix. It looks fine.
Noam Rosenthal
Comment 3
2010-02-25 11:37:24 PST
***
Bug 35283
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 4
2010-02-26 19:00:02 PST
Comment on
attachment 49511
[details]
Fix a regression caused by some optimization to GraphicsLayerQt, and adjust the transformation Clearing flags on attachment: 49511 Committed
r55334
: <
http://trac.webkit.org/changeset/55334
>
WebKit Commit Bot
Comment 5
2010-02-26 19:00:07 PST
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6
2010-04-29 00:16:54 PDT
Revision
r55334
cherry-picked into qtwebkit-2.0 with commit 34e0178e2e498811c31375d7744582f667cd2ff5
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug