2010-02-26  Noam Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsLayerQt: artifacts and wrong transformOrigin
        This was due to wrong way of applying cache-mode and transformation
        on a graphics-item with HTML. Cache-mode should be updated
        when the content type updates, even if it was the same cache-mode

        https://bugs.webkit.org/show_bug.cgi?id=35382

        Test URL attached to the bug now works correctly.

        * platform/graphics/qt/GraphicsLayerQt.cpp:
        (WebCore::GraphicsLayerQtImpl::computeTransform):
        (WebCore::GraphicsLayerQtImpl::flushChanges):

Canonical link: https://commits.webkit.org/46635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55334 268f45cc-cd09-0410-ab3c-d52691b4dbfc